--- a/reportes_airovac/reports/reporte.xml
+++ b/reportes_airovac/reports/reporte.xml
@@ -8,7 +8,7 @@
             report_type="qweb-pdf"
             name="reportes_airovac.reporte_ventas_presupuesto_pedido"
             file="reportes_airovac.reporte_ventas_presupuesto_pedido"
-            print_report_name="(object.name)"
+            print_report_name="Cotización - %s' % (object.name)"
         />
 
         <!-- Formato de papel -->
