--- a/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
+++ b/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
@@ -96,6 +96,12 @@
                                     </p>
                                 </div>
                                 <div class="col-auto mw-100 mb-2">
+                                    <strong>Fecha de expiración:</strong>
+                                    <p class="m-0">
+                                        <span t-field="doc.validity_order" t-options='{"format": "dd/mm/yyyy"}'  style="font-size: 23px;"></span>
+                                    </p>
+                                </div>
+                                <div class="col-auto mw-100 mb-2">
                                     <strong>Comercial:</strong>
                                     <p class="m-0"><span t-field="doc.create_uid.name"></span></p>
                                 </div>
@@ -105,11 +111,11 @@
                         <table class="table table-sm o_main_table">
                             <thead>
                                 <tr>
-                                    <th name="th_description" class="text-left">Descripción</th>
-                                    <th name="th_quantity" class="text-right">Cantidad</th>
-                                    <th name="th_priceunit" class="text-right">Precio unitario</th>
-                                    <th name="th_e_t_e" class="text-right">T.E</th>
-                                    <th name="th_subtotal" class="text-right">Importe</th>
+                                    <th width="50%" name="th_description" class="text-left">Descripción</th>
+                                    <th width="10%" name="th_quantity" class="text-right">Cantidad</th>
+                                    <th width="10%" name="th_priceunit" class="text-right">Precio unitario</th>
+                                    <th width="20%" name="th_e_t_e" class="text-right">T.E</th>
+                                    <th width="10%" name="th_subtotal" class="text-right">Importe</th>
                                 </tr>
                             </thead>
 
@@ -119,7 +125,7 @@
                                     <t t-if = "line.display_type == False" >
                                         <tr class="">
                                             <td name="td_name">
-                                                <span t-field="line.name">
+                                                <span style="font-size: 13px" t-field="line.name">
                                                 </span>
                                             </td>
                                             <td name="td_quantity" class="text-right">
@@ -132,7 +138,7 @@
                                                 <span t-field="line.e_t_e"></span>
                                             </td>
                                             <td name="td_subtotal" class="text-right o_price_total">
-                                                <span class="oe_currency_value" t-field="line.price_total"></span>
+                                                <span class="oe_currency_value" t-field="line.price_subtotal"></span>
                                             </td>
                                         </tr>
                                     </t>
