--- a/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
+++ b/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
@@ -98,7 +98,7 @@
                                 <div class="col-auto mw-100 mb-2">
                                     <strong>Fecha de expiración:</strong>
                                     <p class="m-0">
-                                        <span t-field="doc.validity_date" t-options='{"format": "dd/mm/yyyy"}'  style="font-size: 23px;"></span>
+                                        <span t-field="doc.validity_date"   style="font-size: 23px;"></span>
                                     </p>
                                 </div>
                                 <div class="col-auto mw-100 mb-2">
