--- a/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
+++ b/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
@@ -111,11 +111,11 @@
                         <table class="table table-sm o_main_table">
                             <thead>
                                 <tr>
-                                    <th width="50%" name="th_description" class="text-center">Descripción</th>
-                                    <th width="10%" name="th_quantity" class="text-center">Cantidad</th>
-                                    <th width="12%" name="th_priceunit" class="text-center">Precio unitario</th>
-                                    <th width="16%" name="th_e_t_e" class="text-center">T.E</th>
-                                    <th width="12%" name="th_subtotal" class="text-center">Subtotal<t t-esc="doc.pricelist_id.currency_id.name"></t></th>
+                                    <th width="50%" name="th_description" class="text-center" style="vertical-align:middle">Descripción</th>
+                                    <th width="10%" name="th_quantity" class="text-center" style="vertical-align:middle">Cantidad</th>
+                                    <th width="12%" name="th_priceunit" class="text-center" style="vertical-align:middle">Precio unitario</th>
+                                    <th width="16%" name="th_e_t_e" class="text-center" style="vertical-align:middle">T.E</th>
+                                    <th width="12%" name="th_subtotal" class="text-center" style="vertical-align:middle">Subtotal  <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t></th>
                                 </tr>
                             </thead>
 
@@ -128,16 +128,16 @@
                                                 <span style="font-size: 13px" t-field="line.name">
                                                 </span>
                                             </td>
-                                            <td name="td_quantity" class="text-center">
+                                            <td name="td_quantity" class="text-center" style="vertical-align:middle">
                                                 <span t-field="line.product_uom_qty"></span>
                                             </td>
-                                            <td name="td_priceunit" class="text-center">
+                                            <td name="td_priceunit" class="text-center" style="vertical-align:middle">
                                                 <span t-field="line.price_unit"></span>
                                             </td>
-                                            <td name="td_e_t_e" class="text-center">
+                                            <td name="td_e_t_e" class="text-center" style="vertical-align:middle">
                                                 <span t-field="line.e_t_e"></span>
                                             </td>
-                                            <td name="td_subtotal" class="text-center o_price_total">
+                                            <td name="td_subtotal" class="text-center o_price_total" style="vertical-align:middle">
                                                 <span class="oe_currency_value" t-field="line.price_subtotal"></span>
                                             </td>
                                         </tr>
@@ -163,7 +163,7 @@
                                     <div class="col-4">
                                         <table class="table table-sm">
                                             <tbody><tr class="border-black o_subtotal" style="">
-                                                <td name="td_amount_untaxed_label"><strong>Subtotal</strong></td>
+                                                <td name="td_amount_untaxed_label"><strong>Subtotal <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </strong></td>
                                                 <td name="td_amount_untaxed" class="text-right">
                                                     <span><span class="oe_currency_value" t-field="doc.amount_untaxed"></span></span>
                                                 </td>
@@ -181,9 +181,9 @@
                                                 </tr>
 
                                                 <tr class="border-black o_total">
-                                                    <td name="td_amount_total_label"><strong>Total</strong></td>
+                                                    <td name="td_amount_total_label"><strong>Total  <![CDATA[&nbsp;]]> <t t-esc="doc.pricelist_id.currency_id.name"></t> </strong></td>
                                                     <td name="td_amount_total" class="text-right">
-                                                        <span><span class="oe_currency_value" t-field="doc.amount_total"></span></span><t t-esc="doc.pricelist_id.currency_id.name"></t>
+                                                        <span><span class="oe_currency_value" t-field="doc.amount_total"></span></span>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -196,7 +196,7 @@
 
 
                             <div style="margin-top:5px;"  class="col-12 text-left" name="information_block">
-                                <h3> Condiciones Generales:</h3>
+                                <h5> Condiciones Generales:</h5>
                                 » Los precios son en dólares americanos y se cobrarán en dólares, ó al tipo de cambio de venta bancario vigente a la fecha del pago <br/>
                                 » Los precios no incluyen el 16% de I.V.A. <br/>
                                 » Las condiciones de pago son: 50% anticipo, 50% contra aviso de embarque <br/>
@@ -219,7 +219,7 @@
                             </div>
 
                             <div style="margin-top:5px;" class="col-12 text-left" name="information_block">
-                                <h3> Términos y condiciones:</h3>
+                                <h5> Términos y condiciones:</h5>
                                 <t t-esc="doc.note"></t>
 
                             </div>
@@ -228,7 +228,7 @@
                     </div>
 
                     <div class="footer o_standard_footer o_company_1_layout">
-                        <div class="text-center" style="border-top: 1px solid black;">
+                        <div class="text-center" style="border-top: 1px solid black; font-size: 13px;">
                             AiroVAC
                             Proyectos en Ventilación, Agua y Control<br/>
                             Tel. Mty (81) 8333 7738, D.F. (55) 5005 9893, Gdl (33) 8995 7135, Mer (999) 801 1300, Pue (222) 644 0560, e.mail: info@airovac.com<br/>
