--- a/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
+++ b/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
@@ -125,8 +125,15 @@
                                     <t t-if = "line.display_type == False" >
                                         <tr class="">
                                             <td name="td_name">
-                                                <span style="font-size: 13px" t-field="line.name">
-                                                </span>
+                                                <strong><span style="font-size: 15px" t-field="line.product_template_id.default_code"></span></strong><br/>
+                                                <t t-if = "line.product_template_id.description_sale != False" >
+
+                                                    <span style="font-size: 13px" t-field="line.product_template_id.description_sale"></span>
+                                                </t>
+                                                <t t-if = "line.product_template_id.description_sale == False" >
+                                                    <span style="font-size: 13px" t-field="line.product_template_id.name"></span>
+                                                </t>
+
                                             </td>
                                             <td name="td_quantity" class="text-center" style="vertical-align:middle">
                                                 <span t-field="line.product_uom_qty"></span>
@@ -223,7 +230,6 @@
                                 <t t-esc="doc.note"></t>
 
                             </div>
-
 
                     </div>
 
