--- a/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
+++ b/reportes_airovac/reports/reporte_ventas_presupuesto_pedido.xml
@@ -113,7 +113,8 @@
                         <table class="table table-sm o_main_table">
                             <thead>
                                 <tr>
-                                    <th width="50%" name="th_description" class="text-center" style="vertical-align:middle">Descripción</th>
+                                    <th width="10%" name="th_partida" class="text-center" style="vertical-align:middle">Partida</th>
+                                    <th width="40%" name="th_description" class="text-center" style="vertical-align:middle">Descripción</th>
                                     <th width="10%" name="th_quantity" class="text-center" style="vertical-align:middle">Cantidad</th>
                                     <th width="12%" name="th_priceunit" class="text-center" style="vertical-align:middle">Precio unitario</th>
                                     <th width="16%" name="th_e_t_e" class="text-center" style="vertical-align:middle">T.E</th>
@@ -126,6 +127,10 @@
                                 <t t-foreach="doc.order_line" t-as="line">
                                     <t t-if = "line.display_type == False" >
                                         <tr class="">
+                                            <td name="td_partida">
+                                                <span style="font-size: 15px" t-field="line.e_partida"></span>
+
+                                            </td>
                                             <td name="td_name">
                                                 <strong><span style="font-size: 15px" t-field="line.product_template_id.default_code"></span></strong><br/>
                                                 <t t-if = "line.product_template_id.description_sale != False" >
